// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`actions > index > bundle addBundle should work 1`] = `
Object {
  "type": "add bundle",
}
`;

exports[`actions > index > bundle deleteBundle should work 1`] = `
Array [
  Object {
    "payload": 1,
    "type": "delete bundle",
  },
  Object {
    "payload": Object {
      "next": [Function],
      "options": Object {
        "method": "delete",
      },
      "url": "/api/bundle/1",
    },
    "type": "fetch",
  },
]
`;

exports[`actions > index > bundle deleteBundle should work 2`] = `
Array [
  Object {
    "payload": 1,
    "type": "delete bundle",
  },
  Array [
    Object {
      "payload": Object {
        "options": Object {
          "method": "delete",
        },
        "url": "/api/bundle/1",
      },
      "type": "increment outstanding fetches",
    },
    Promise {},
  ],
]
`;

exports[`actions > index > bundle deleteBundle should work 3`] = `
Array [
  Object {
    "payload": Object {
      "options": Object {
        "method": "delete",
      },
      "url": "/api/bundle/1",
    },
    "type": "increment outstanding fetches",
  },
  Promise {},
]
`;

exports[`actions > index > bundle saveBundle should work 1`] = `
Array [
  Object {
    "payload": Object {
      "id": 1,
    },
    "type": "set bundle",
  },
  Object {
    "payload": Object {
      "next": [Function],
      "options": Object {
        "body": Object {
          "id": 1,
        },
        "method": "put",
      },
      "url": "/api/bundle/1",
    },
    "type": "fetch",
  },
]
`;

exports[`actions > index > bundle saveBundle should work 2`] = `
Array [
  Object {
    "payload": Object {
      "id": 1,
    },
    "type": "set bundle",
  },
  Array [
    Object {
      "payload": Object {
        "options": Object {
          "body": Object {
            "id": 1,
          },
          "method": "put",
        },
        "url": "/api/bundle/1",
      },
      "type": "increment outstanding fetches",
    },
    Promise {},
  ],
]
`;

exports[`actions > index > bundle saveBundle should work 3`] = `
Array [
  Object {
    "payload": Object {
      "options": Object {
        "body": Object {
          "id": 1,
        },
        "method": "put",
      },
      "url": "/api/bundle/1",
    },
    "type": "increment outstanding fetches",
  },
  Promise {},
]
`;

exports[`actions > index > bundle setBundle should work 1`] = `
Object {
  "type": "set bundle",
}
`;

exports[`actions > index > bundle setBundles should work 1`] = `
Object {
  "type": "set bundles",
}
`;

exports[`actions > index > feed setFeeds should work 1`] = `
Object {
  "type": "set feeds",
}
`;

exports[`actions > index > login / logout login should work 1`] = `
Object {
  "type": "log in",
}
`;

exports[`actions > index > login / logout logout should work 1`] = `
Object {
  "type": "log out",
}
`;

exports[`actions > index > map state setActiveTrips should work 1`] = `
Object {
  "type": "set active trips",
}
`;

exports[`actions > index > map state setMapState should work 1`] = `
Object {
  "type": "set map state",
}
`;

exports[`actions > index > map state setUser should work 1`] = `
Object {
  "type": "set user",
}
`;

exports[`actions > index > user setActiveTrips should work 1`] = `
Object {
  "type": "set active trips",
}
`;

exports[`actions > index > user setUser should work 1`] = `
Object {
  "type": "set user",
}
`;
